# tauri-plugin-android-accessiblity

./: .gitignore  Cargo.toml  README.md  README_en.md  README_zh-cn.md  build.rs  package.json  tauri-plugin-android-accessibility-api-0.2.1.tgz
android/: build.gradle.kts  consumer-rules.pro  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/java/com/tauri/plugin/androidaccessiblity/: AndroidAccessiblityPlugin.kt  TauriAccessibilityService.kt
android/src/main/res/values/: strings.xml
android/src/main/res/xml/: tauri_accessibility_service_config.xml
examples/tauri-app/: README.md  package.json  vite.config.js
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: check_accessibility_enabled.toml  click_node.toml  get_frontmost_ui_tree.toml  open_accessibility_settings.toml  perform_gesture.toml  perform_global_action.toml  perform_node_action.toml  type_text.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
